--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
    <li><span></span><a href=https://passport.zhihuishu.com/login?service=https%3A%2F%2Fstudyservice-api.zhihuishu.com%2Flogin%2Fgologin%3Ffromurl%3Dhttps%253A%252F%252Fstudyh5.zhihuishu.com%252FvideoStudy.html%2523%252FstudyVideo%253FrecruitAndCourseId%253D4b595b59405f4859454a5859584d5e4a5b>智慧树</a></li>   
  <li><span></span><a href=https://search.xn--pckl1n.tw/search?q=>谷歌搜索</a></li> 
    <li><span></span><a href=https://weixin.sogou.com/>微信搜索</a></li>   
+   <li><span></span><a href=https://www.niceso.fun/>奈斯搜索</a></li> 
+   <li><span></span><a href=https://www.upyunso.com/>阿里云搜</a></li> 
+   <li><span></span><a href=https://v3.ujuso.com/>优聚搜</a></li> 
+   <li><span></span><a href=https://hub.xn--gzu630h.xn--kpry57d/>github</a></li> 
+   <li><span></span><a href=https://www.sssoou.com/>telegram搜索</a></li> 
+   <li><span></span><a href=https://tech.ziyuan.iters.cn/>技术资源</a></li> 
+  
    </ul>
     </div>
     </div>
